--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="meta">
-                <h1></h1>
+                <a href="index.html"><img src="images/hard_rock_logo.png" alt="Hard Rock International Logo"></a>
                 <nav class="navigation">
                     <ul>
                         <li>
@@ -33,5 +33,12 @@
                 <a href="/register.html">Register</a>
             </div>
         </header>
+        <div class="hero">
+            <img src="images/hotel.jpg" alt="Hard Rock Hotel">
+            <div class="call-to-action">
+                <p>Bringing our community together</p> 
+                <a href="">Join Today</a> 
+            </div>          
+        </div>
     </body>
 </html>
