--- a/index.html
+++ b/index.html
@@ -40,5 +40,28 @@
                 <a href="">Join Today</a> 
             </div>          
         </div>
+        <main>
+            <h1>Connect with other users like never before</h1>
+            <div class="benefit benefit-1">
+                <h2>Chat in real-time</h2>
+                <p>With Connect.ly's new chat system, reaching out to other users has never been easier. Find new people to connect with, and stay in touch with your besties.</p>
+                <a href="">Learn more</a>
+            </div>
+            <div class="benefit benefit-2">
+                <h2>Orginize events</h2>
+                <p>Finding the right time and place to get everyone together was tricky before Connect.ly. Now, you can use a simple grid-based view to find out what works best for everyone.</p>
+                <a href="">Learn more</a>
+            </div>
+            <div class="benefit benefit-3">
+                <h2>Play favorites</h2>
+                <p>Let's face it, everyone has favorites. With Connect.ly, now you can not only track your favorite products, but share them with the rest of your network too.</p>
+                <a href="">Learn more</a>
+            </div>
+            <div class="benefit benefit-4">
+                <h2>Earn Kred</h2>
+                <p>When you engage with our community, you should be rewarded. That's why Connect.ly tracks the Kred you've already accumulated and gives you even more ways to earn Kred.</p>
+                <a href="">Learn more</a>
+            </div>
+        </main>
     </body>
 </html>
