Fix W3C HTML errors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hard Rock International | Connect.ly</title>
+        <title>Connect.ly | Hard Rock International</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="index.css">
     </head>
@@ -36,29 +36,29 @@
         <div class="hero">
             <img src="images/hotel.jpg" alt="Hard Rock Hotel">
             <div class="call-to-action">
-                <p>Bringing our community together</p> 
+                <h1>Bringing our community together</h1> 
                 <a href="">Join Today</a> 
             </div>          
         </div>
         <main>
-            <h1>Connect with other users like never before</h1>
+            <h2>Connect with other users like never before</h2>
             <div class="benefit benefit-1">
-                <h2>Chat in real-time</h2>
+                <h3>Chat in real-time</h3>
                 <p>With Connect.ly's new chat system, reaching out to other users has never been easier. Find new people to connect with, and stay in touch with your besties.</p>
                 <a href="">Learn more</a>
             </div>
             <div class="benefit benefit-2">
-                <h2>Orginize events</h2>
+                <h3>Orginize events</h3>
                 <p>Finding the right time and place to get everyone together was tricky before Connect.ly. Now, you can use a simple grid-based view to find out what works best for everyone.</p>
                 <a href="">Learn more</a>
             </div>
             <div class="benefit benefit-3">
-                <h2>Play favorites</h2>
+                <h3>Play favorites</h3>
                 <p>Let's face it, everyone has favorites. With Connect.ly, now you can not only track your favorite products, but share them with the rest of your network too.</p>
                 <a href="">Learn more</a>
             </div>
             <div class="benefit benefit-4">
-                <h2>Earn Kred</h2>
+                <h3>Earn Kred</h3>
                 <p>When you engage with our community, you should be rewarded. That's why Connect.ly tracks the Kred you've already accumulated and gives you even more ways to earn Kred.</p>
                 <a href="">Learn more</a>
             </div>
