Fix Spelling Error

--- a/index.html
+++ b/index.html
@@ -1,68 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Connect.ly | Hard Rock International</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" type="image/ico" href="images/Untitled-1.ico">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <header>
-            <div class="meta">
-                <a href="index.html"><img src="images/hard_rock_logo.png" alt="Hard Rock International Logo"></a>
-                <nav class="navigation">
-                    <ul>
-                        <li>
-                            <a href="/features.html">Features</a>
-                        </li>
-                        <li>
-                            <a href="/pricing.html">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="/community.html">Community</a>
-                        </li>
-                        <li>
-                            <a href="/support.html">Support</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="actions">
-                <a href="/login.html">Log In</a>
-                <a href="/register.html">Register</a>
-            </div>
-        </header>
-        <div class="hero">
-            <img src="images/hotel.jpg" alt="Hard Rock Hotel">
-            <div class="call-to-action">
-                <h1>Bringing our community together</h1> 
-                <a href="">Join Today</a> 
-            </div>          
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Connect.ly | Hard Rock International</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
+        integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/ico" href="images/Untitled-1.ico">
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <header>
+        <div class="meta">
+            <a href="index.html"><img src="images/hard_rock_logo.png" alt="Hard Rock International Logo"></a>
+            <nav class="navigation">
+                <ul>
+                    <li>
+                        <a href="/features.html">Features</a>
+                    </li>
+                    <li>
+                        <a href="/pricing.html">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="/community.html">Community</a>
+                    </li>
+                    <li>
+                        <a href="/support.html">Support</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <main>
-            <h2>Connect with other users like never before</h2>
-            <div class="benefit benefit-1">
-                <h3>Chat in real-time</h3>
-                <p>With Connect.ly's new chat system, reaching out to other users has never been easier. Find new people to connect with, and stay in touch with your besties.</p>
-                <a href="">Learn more</a>
-            </div>
-            <div class="benefit benefit-2">
-                <h3>Orginize events</h3>
-                <p>Finding the right time and place to get everyone together was tricky before Connect.ly. Now, you can use a simple grid-based view to find out what works best for everyone.</p>
-                <a href="">Learn more</a>
-            </div>
-            <div class="benefit benefit-3">
-                <h3>Play favorites</h3>
-                <p>Let's face it, everyone has favorites. With Connect.ly, now you can not only track your favorite products, but share them with the rest of your network too.</p>
-                <a href="">Learn more</a>
-            </div>
-            <div class="benefit benefit-4">
-                <h3>Earn Kred</h3>
-                <p>When you engage with our community, you should be rewarded. That's why Connect.ly tracks the Kred you've already accumulated and gives you even more ways to earn Kred.</p>
-                <a href="">Learn more</a>
-            </div>
-        </main>
-    </body>
+        <div class="actions">
+            <a href="/login.html">Log In</a>
+            <a href="/register.html">Register</a>
+        </div>
+    </header>
+    <div class="hero">
+        <img src="images/hotel.jpg" alt="Hard Rock Hotel">
+        <div class="call-to-action">
+            <h1>Bringing our community together</h1>
+            <a href="">Join Today</a>
+        </div>
+    </div>
+    <main>
+        <h2>Connect with other users like never before</h2>
+        <div class="benefit benefit-1">
+            <h3>Chat in real-time</h3>
+            <p>With Connect.ly's new chat system, reaching out to other users has never been easier. Find new people to
+                connect with, and stay in touch with your besties.</p>
+            <a href="">Learn more</a>
+        </div>
+        <div class="benefit benefit-2">
+            <h3>Organize events</h3>
+            <p>Finding the right time and place to get everyone together was tricky before Connect.ly. Now, you can use
+                a simple grid-based view to find out what works best for everyone.</p>
+            <a href="">Learn more</a>
+        </div>
+        <div class="benefit benefit-3">
+            <h3>Play favorites</h3>
+            <p>Let's face it, everyone has favorites. With Connect.ly, now you can not only track your favorite
+                products, but share them with the rest of your network too.</p>
+            <a href="">Learn more</a>
+        </div>
+        <div class="benefit benefit-4">
+            <h3>Earn Kred</h3>
+            <p>When you engage with our community, you should be rewarded. That's why Connect.ly tracks the Kred you've
+                already accumulated and gives you even more ways to earn Kred.</p>
+            <a href="">Learn more</a>
+        </div>
+    </main>
+</body>
+
 </html>
